--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,7 +3,7 @@
  <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
  <span class="content">
  <%= micropost.content %>
- <%= image_tag micropost.picture.try(:url) unless micropost.picture.blank?  %>
+ <%= image_tag micropost.picture.try(:url) if micropost.picture?  %>
  </span>
  <span class="timestamp">
  Posted <%= time_ago_in_words(micropost.created_at) %> ago.
